syntax = "proto3";

message ChatMessage {
    int32 id = 1;
    string from = 2;
    string to = 3;
    string msg = 4;
    string time = 5;
}

message User {
    string name = 1;
}

message Empty {}

message UserList {
    repeated User users = 1;
}

message JoinResponse {
    int32 error = 1;
    string msg = 2;
}

message JoinNotification {
    string user = 1;
}

message ReceiveMsgRequest {
    string user = 1;
    int32 admin = 2;
}

message LeaveRequest {
    string user = 1;
}

service ChatService {
    rpc join(User) returns (JoinResponse) {}
    rpc notifyAdmin(User) returns (stream User) {}
    rpc sendMsg(ChatMessage) returns (Empty) {}
    rpc receiveMsg(ReceiveMsgRequest) returns (stream ChatMessage) {}
    rpc getAllClients(Empty) returns (UserList) {}
    rpc leave(LeaveRequest) returns (Empty) {}
}